<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:padding="15dp"
        >
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/circle_logo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="Sing-In "
            android:textAlignment="center"
            android:textSize="24sp"

          />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="@drawable/corner"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
          />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="39dp"


            android:background="@drawable/corner"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_ime"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="center"
        android:padding="15dp"
        >

        <Button
            android:id="@+id/b_sign_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"

            />

    </LinearLayout>
</LinearLayout>