<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buscar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danny.firebaseapp.Wall.Wall">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/como_te_podemos_ayudar"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <View
        android:id="@+id/view70"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

    </View>

    <EditText
        android:id="@+id/area_texto_comentarios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:hint="@string/introduce_tu_cometario"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/dejanos_tu_comentario_y_nos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:background="@drawable/corner_white"
        android:backgroundTint="@color/verdeToolbar"
        android:id="@+id/boton_enviar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/enviar"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="63dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp" />



</android.support.constraint.ConstraintLayout>
