<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.danny.firebaseapp.post.PostForm"
                  >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="15">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />
        </RelativeLayout>
        <View

            android:id="@+id/view4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@android:color/black">

        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            >
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />
        </RelativeLayout>
        <View

            android:id="@+id/view5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@android:color/black">

        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            >
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ProgressBar
                android:id="@+id/progressBar5"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:weightSum="10">

    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="50">

        <TextView
            android:id="@+id/editText17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/titulo"
            android:textColor="@color/verde"
            android:textStyle="bold" />

        <View
            android:id="@+id/view66"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black">

        </View>

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="18"
            android:background="@drawable/corner_white"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/descripcion_del_articulo"
            android:textColor="@color/verde"
            android:textStyle="bold" />

        <View
            android:id="@+id/view69"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black">

        </View>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:background="@drawable/corner_white"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete" />

        <View
            android:id="@+id/view70"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black">

        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15.5"
            android:weightSum="20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="vertical"
                android:weightSum="10"


                >


                <TextView
                    android:id="@+id/editText12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/telefono"
                    android:textAlignment="inherit"
                    android:textColor="@color/verde" />

                <TextView
                    android:id="@+id/editText11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/precio"
                    android:textAlignment="inherit"
                    android:textColor="@color/verde"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:weightSum="0">

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="@integer/google_play_services_version"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6">

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="@integer/google_play_services_version"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">




            <Button
                android:id="@+id/floatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/corner_white"
                android:backgroundTint="@color/verdeToolbar"
                android:text="@string/subir_articulo"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
